lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> assignment ;
Rule 7     instruction -> if_stmt
Rule 8     instruction -> loops
Rule 9     instruction -> BREAK ;
Rule 10    instruction -> CONTINUE ;
Rule 11    instruction -> return_expr ;
Rule 12    instruction -> PRINT create_stmt ;
Rule 13    instruction -> { instructions }
Rule 14    assignment -> ID = expression
Rule 15    assignment -> ID ADDASSIGN expression
Rule 16    assignment -> ID SUBASSIGN expression
Rule 17    assignment -> ID MULASSIGN expression
Rule 18    assignment -> ID DIVASSIGN expression
Rule 19    assignment -> ID [ expression , expression ] ADDASSIGN expression
Rule 20    assignment -> ID [ expression , expression ] SUBASSIGN expression
Rule 21    assignment -> ID [ expression , expression ] MULASSIGN expression
Rule 22    assignment -> ID [ expression , expression ] DIVASSIGN expression
Rule 23    assignment -> ID [ expression , expression ] = expression
Rule 24    expression -> expression ADD expression
Rule 25    expression -> expression MINUS expression
Rule 26    expression -> expression MUL expression
Rule 27    expression -> expression DIVIDE expression
Rule 28    expression -> MINUS expression
Rule 29    expression -> expression '
Rule 30    expression -> expression DOTADD expression
Rule 31    expression -> expression DOTSUB expression
Rule 32    expression -> expression DOTMUL expression
Rule 33    expression -> expression DOTDIVIDE expression
Rule 34    expression -> matrix_expression
Rule 35    expression -> matrix_create
Rule 36    expression -> INTNUM
Rule 37    expression -> FLOAT
Rule 38    expression -> ID
Rule 39    matrix_expression -> ZEROS ( expression )
Rule 40    matrix_expression -> ONES ( expression )
Rule 41    matrix_expression -> EYE ( expression )
Rule 42    matrix_create -> [ matrix_rows ]
Rule 43    matrix_rows -> [ matrix_elems ] , matrix_rows
Rule 44    matrix_rows -> [ matrix_elems ]
Rule 45    matrix_elems -> expression , matrix_elems
Rule 46    matrix_elems -> expression
Rule 47    condition -> expression GREATER expression
Rule 48    condition -> expression LESS expression
Rule 49    condition -> expression GREATEREQ expression
Rule 50    condition -> expression LESSEQ expression
Rule 51    condition -> expression NOTEQ expression
Rule 52    condition -> expression EQ expression
Rule 53    if_stmt -> IF ( condition ) instruction
Rule 54    if_stmt -> IF ( condition ) instruction ELSE instruction
Rule 55    create_stmt -> p_print_list
Rule 56    p_print_list -> STRING
Rule 57    p_print_list -> p_print_list , expression
Rule 58    p_print_list -> expression
Rule 59    loops -> while_l
Rule 60    loops -> for_l
Rule 61    while_l -> WHILE ( condition ) instruction
Rule 62    for_l -> FOR ID = expression : expression instruction
Rule 63    return_expr -> RETURN
Rule 64    return_expr -> RETURN expression

Terminals, with rules where they appear

'                    : 29
(                    : 39 40 41 53 54 61
)                    : 39 40 41 53 54 61
,                    : 19 20 21 22 23 43 45 57
:                    : 62
;                    : 6 9 10 11 12
=                    : 14 23 62
ADD                  : 24
ADDASSIGN            : 15 19
BREAK                : 9
CONTINUE             : 10
DIVASSIGN            : 18 22
DIVIDE               : 27
DOTADD               : 30
DOTDIVIDE            : 33
DOTMUL               : 32
DOTSUB               : 31
ELSE                 : 54
EQ                   : 52
EYE                  : 41
FLOAT                : 37
FOR                  : 62
GREATER              : 47
GREATEREQ            : 49
ID                   : 14 15 16 17 18 19 20 21 22 23 38 62
IF                   : 53 54
INTNUM               : 36
LESS                 : 48
LESSEQ               : 50
MINUS                : 25 28
MUL                  : 26
MULASSIGN            : 17 21
NOTEQ                : 51
ONES                 : 40
PRINT                : 12
RETURN               : 63 64
STRING               : 56
SUBASSIGN            : 16 20
WHILE                : 61
ZEROS                : 39
[                    : 19 20 21 22 23 42 43 44
]                    : 19 20 21 22 23 42 43 44
error                : 
{                    : 13
}                    : 13

Nonterminals, with rules where they appear

assignment           : 6
condition            : 53 54 61
create_stmt          : 12
expression           : 14 15 16 17 18 19 19 19 20 20 20 21 21 21 22 22 22 23 23 23 24 24 25 25 26 26 27 27 28 29 30 30 31 31 32 32 33 33 39 40 41 45 46 47 47 48 48 49 49 50 50 51 51 52 52 57 58 62 62 64
for_l                : 60
if_stmt              : 7
instruction          : 4 5 53 54 54 61 62
instructions         : 2 4 13
instructions_opt     : 1
loops                : 8
matrix_create        : 35
matrix_elems         : 43 44 45
matrix_expression    : 34
matrix_rows          : 42 43
p_print_list         : 55 57
program              : 0
return_expr          : 11
while_l              : 59

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . assignment ;
    (7) instruction -> . if_stmt
    (8) instruction -> . loops
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . return_expr ;
    (12) instruction -> . PRINT create_stmt ;
    (13) instruction -> . { instructions }
    (14) assignment -> . ID = expression
    (15) assignment -> . ID ADDASSIGN expression
    (16) assignment -> . ID SUBASSIGN expression
    (17) assignment -> . ID MULASSIGN expression
    (18) assignment -> . ID DIVASSIGN expression
    (19) assignment -> . ID [ expression , expression ] ADDASSIGN expression
    (20) assignment -> . ID [ expression , expression ] SUBASSIGN expression
    (21) assignment -> . ID [ expression , expression ] MULASSIGN expression
    (22) assignment -> . ID [ expression , expression ] DIVASSIGN expression
    (23) assignment -> . ID [ expression , expression ] = expression
    (53) if_stmt -> . IF ( condition ) instruction
    (54) if_stmt -> . IF ( condition ) instruction ELSE instruction
    (59) loops -> . while_l
    (60) loops -> . for_l
    (63) return_expr -> . RETURN
    (64) return_expr -> . RETURN expression
    (61) while_l -> . WHILE ( condition ) instruction
    (62) for_l -> . FOR ID = expression : expression instruction

    $end            reduce using rule 3 (instructions_opt -> .)
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    PRINT           shift and go to state 11
    {               shift and go to state 12
    ID              shift and go to state 13
    IF              shift and go to state 14
    RETURN          shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    assignment                     shift and go to state 5
    if_stmt                        shift and go to state 6
    loops                          shift and go to state 7
    return_expr                    shift and go to state 10
    while_l                        shift and go to state 15
    for_l                          shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . assignment ;
    (7) instruction -> . if_stmt
    (8) instruction -> . loops
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . return_expr ;
    (12) instruction -> . PRINT create_stmt ;
    (13) instruction -> . { instructions }
    (14) assignment -> . ID = expression
    (15) assignment -> . ID ADDASSIGN expression
    (16) assignment -> . ID SUBASSIGN expression
    (17) assignment -> . ID MULASSIGN expression
    (18) assignment -> . ID DIVASSIGN expression
    (19) assignment -> . ID [ expression , expression ] ADDASSIGN expression
    (20) assignment -> . ID [ expression , expression ] SUBASSIGN expression
    (21) assignment -> . ID [ expression , expression ] MULASSIGN expression
    (22) assignment -> . ID [ expression , expression ] DIVASSIGN expression
    (23) assignment -> . ID [ expression , expression ] = expression
    (53) if_stmt -> . IF ( condition ) instruction
    (54) if_stmt -> . IF ( condition ) instruction ELSE instruction
    (59) loops -> . while_l
    (60) loops -> . for_l
    (63) return_expr -> . RETURN
    (64) return_expr -> . RETURN expression
    (61) while_l -> . WHILE ( condition ) instruction
    (62) for_l -> . FOR ID = expression : expression instruction

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    PRINT           shift and go to state 11
    {               shift and go to state 12
    ID              shift and go to state 13
    IF              shift and go to state 14
    RETURN          shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19

    instruction                    shift and go to state 20
    assignment                     shift and go to state 5
    if_stmt                        shift and go to state 6
    loops                          shift and go to state 7
    return_expr                    shift and go to state 10
    while_l                        shift and go to state 15
    for_l                          shift and go to state 16

state 4

    (5) instructions -> instruction .

    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    {               reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> assignment . ;

    ;               shift and go to state 21


state 6

    (7) instruction -> if_stmt .

    BREAK           reduce using rule 7 (instruction -> if_stmt .)
    CONTINUE        reduce using rule 7 (instruction -> if_stmt .)
    PRINT           reduce using rule 7 (instruction -> if_stmt .)
    {               reduce using rule 7 (instruction -> if_stmt .)
    ID              reduce using rule 7 (instruction -> if_stmt .)
    IF              reduce using rule 7 (instruction -> if_stmt .)
    RETURN          reduce using rule 7 (instruction -> if_stmt .)
    WHILE           reduce using rule 7 (instruction -> if_stmt .)
    FOR             reduce using rule 7 (instruction -> if_stmt .)
    $end            reduce using rule 7 (instruction -> if_stmt .)
    }               reduce using rule 7 (instruction -> if_stmt .)
    ELSE            reduce using rule 7 (instruction -> if_stmt .)


state 7

    (8) instruction -> loops .

    BREAK           reduce using rule 8 (instruction -> loops .)
    CONTINUE        reduce using rule 8 (instruction -> loops .)
    PRINT           reduce using rule 8 (instruction -> loops .)
    {               reduce using rule 8 (instruction -> loops .)
    ID              reduce using rule 8 (instruction -> loops .)
    IF              reduce using rule 8 (instruction -> loops .)
    RETURN          reduce using rule 8 (instruction -> loops .)
    WHILE           reduce using rule 8 (instruction -> loops .)
    FOR             reduce using rule 8 (instruction -> loops .)
    $end            reduce using rule 8 (instruction -> loops .)
    }               reduce using rule 8 (instruction -> loops .)
    ELSE            reduce using rule 8 (instruction -> loops .)


state 8

    (9) instruction -> BREAK . ;

    ;               shift and go to state 22


state 9

    (10) instruction -> CONTINUE . ;

    ;               shift and go to state 23


state 10

    (11) instruction -> return_expr . ;

    ;               shift and go to state 24


state 11

    (12) instruction -> PRINT . create_stmt ;
    (55) create_stmt -> . p_print_list
    (56) p_print_list -> . STRING
    (57) p_print_list -> . p_print_list , expression
    (58) p_print_list -> . expression
    (24) expression -> . expression ADD expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression MUL expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . MINUS expression
    (29) expression -> . expression '
    (30) expression -> . expression DOTADD expression
    (31) expression -> . expression DOTSUB expression
    (32) expression -> . expression DOTMUL expression
    (33) expression -> . expression DOTDIVIDE expression
    (34) expression -> . matrix_expression
    (35) expression -> . matrix_create
    (36) expression -> . INTNUM
    (37) expression -> . FLOAT
    (38) expression -> . ID
    (39) matrix_expression -> . ZEROS ( expression )
    (40) matrix_expression -> . ONES ( expression )
    (41) matrix_expression -> . EYE ( expression )
    (42) matrix_create -> . [ matrix_rows ]

    STRING          shift and go to state 27
    MINUS           shift and go to state 29
    INTNUM          shift and go to state 32
    FLOAT           shift and go to state 33
    ID              shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    create_stmt                    shift and go to state 25
    p_print_list                   shift and go to state 26
    expression                     shift and go to state 28
    matrix_expression              shift and go to state 30
    matrix_create                  shift and go to state 31

state 12

    (13) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . assignment ;
    (7) instruction -> . if_stmt
    (8) instruction -> . loops
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . return_expr ;
    (12) instruction -> . PRINT create_stmt ;
    (13) instruction -> . { instructions }
    (14) assignment -> . ID = expression
    (15) assignment -> . ID ADDASSIGN expression
    (16) assignment -> . ID SUBASSIGN expression
    (17) assignment -> . ID MULASSIGN expression
    (18) assignment -> . ID DIVASSIGN expression
    (19) assignment -> . ID [ expression , expression ] ADDASSIGN expression
    (20) assignment -> . ID [ expression , expression ] SUBASSIGN expression
    (21) assignment -> . ID [ expression , expression ] MULASSIGN expression
    (22) assignment -> . ID [ expression , expression ] DIVASSIGN expression
    (23) assignment -> . ID [ expression , expression ] = expression
    (53) if_stmt -> . IF ( condition ) instruction
    (54) if_stmt -> . IF ( condition ) instruction ELSE instruction
    (59) loops -> . while_l
    (60) loops -> . for_l
    (63) return_expr -> . RETURN
    (64) return_expr -> . RETURN expression
    (61) while_l -> . WHILE ( condition ) instruction
    (62) for_l -> . FOR ID = expression : expression instruction

    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    PRINT           shift and go to state 11
    {               shift and go to state 12
    ID              shift and go to state 13
    IF              shift and go to state 14
    RETURN          shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19

    instructions                   shift and go to state 39
    instruction                    shift and go to state 4
    assignment                     shift and go to state 5
    if_stmt                        shift and go to state 6
    loops                          shift and go to state 7
    return_expr                    shift and go to state 10
    while_l                        shift and go to state 15
    for_l                          shift and go to state 16

state 13

    (14) assignment -> ID . = expression
    (15) assignment -> ID . ADDASSIGN expression
    (16) assignment -> ID . SUBASSIGN expression
    (17) assignment -> ID . MULASSIGN expression
    (18) assignment -> ID . DIVASSIGN expression
    (19) assignment -> ID . [ expression , expression ] ADDASSIGN expression
    (20) assignment -> ID . [ expression , expression ] SUBASSIGN expression
    (21) assignment -> ID . [ expression , expression ] MULASSIGN expression
    (22) assignment -> ID . [ expression , expression ] DIVASSIGN expression
    (23) assignment -> ID . [ expression , expression ] = expression

    =               shift and go to state 40
    ADDASSIGN       shift and go to state 41
    SUBASSIGN       shift and go to state 42
    MULASSIGN       shift and go to state 43
    DIVASSIGN       shift and go to state 44
    [               shift and go to state 45


state 14

    (53) if_stmt -> IF . ( condition ) instruction
    (54) if_stmt -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 46


state 15

    (59) loops -> while_l .

    BREAK           reduce using rule 59 (loops -> while_l .)
    CONTINUE        reduce using rule 59 (loops -> while_l .)
    PRINT           reduce using rule 59 (loops -> while_l .)
    {               reduce using rule 59 (loops -> while_l .)
    ID              reduce using rule 59 (loops -> while_l .)
    IF              reduce using rule 59 (loops -> while_l .)
    RETURN          reduce using rule 59 (loops -> while_l .)
    WHILE           reduce using rule 59 (loops -> while_l .)
    FOR             reduce using rule 59 (loops -> while_l .)
    $end            reduce using rule 59 (loops -> while_l .)
    }               reduce using rule 59 (loops -> while_l .)
    ELSE            reduce using rule 59 (loops -> while_l .)


state 16

    (60) loops -> for_l .

    BREAK           reduce using rule 60 (loops -> for_l .)
    CONTINUE        reduce using rule 60 (loops -> for_l .)
    PRINT           reduce using rule 60 (loops -> for_l .)
    {               reduce using rule 60 (loops -> for_l .)
    ID              reduce using rule 60 (loops -> for_l .)
    IF              reduce using rule 60 (loops -> for_l .)
    RETURN          reduce using rule 60 (loops -> for_l .)
    WHILE           reduce using rule 60 (loops -> for_l .)
    FOR             reduce using rule 60 (loops -> for_l .)
    $end            reduce using rule 60 (loops -> for_l .)
    }               reduce using rule 60 (loops -> for_l .)
    ELSE            reduce using rule 60 (loops -> for_l .)


state 17

    (63) return_expr -> RETURN .
    (64) return_expr -> RETURN . expression
    (24) expression -> . expression ADD expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression MUL expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . MINUS expression
    (29) expression -> . expression '
    (30) expression -> . expression DOTADD expression
    (31) expression -> . expression DOTSUB expression
    (32) expression -> . expression DOTMUL expression
    (33) expression -> . expression DOTDIVIDE expression
    (34) expression -> . matrix_expression
    (35) expression -> . matrix_create
    (36) expression -> . INTNUM
    (37) expression -> . FLOAT
    (38) expression -> . ID
    (39) matrix_expression -> . ZEROS ( expression )
    (40) matrix_expression -> . ONES ( expression )
    (41) matrix_expression -> . EYE ( expression )
    (42) matrix_create -> . [ matrix_rows ]

    ;               reduce using rule 63 (return_expr -> RETURN .)
    MINUS           shift and go to state 29
    INTNUM          shift and go to state 32
    FLOAT           shift and go to state 33
    ID              shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    expression                     shift and go to state 47
    matrix_expression              shift and go to state 30
    matrix_create                  shift and go to state 31

state 18

    (61) while_l -> WHILE . ( condition ) instruction

    (               shift and go to state 48


state 19

    (62) for_l -> FOR . ID = expression : expression instruction

    ID              shift and go to state 49


state 20

    (4) instructions -> instructions instruction .

    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    {               reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 21

    (6) instruction -> assignment ; .

    BREAK           reduce using rule 6 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 6 (instruction -> assignment ; .)
    PRINT           reduce using rule 6 (instruction -> assignment ; .)
    {               reduce using rule 6 (instruction -> assignment ; .)
    ID              reduce using rule 6 (instruction -> assignment ; .)
    IF              reduce using rule 6 (instruction -> assignment ; .)
    RETURN          reduce using rule 6 (instruction -> assignment ; .)
    WHILE           reduce using rule 6 (instruction -> assignment ; .)
    FOR             reduce using rule 6 (instruction -> assignment ; .)
    $end            reduce using rule 6 (instruction -> assignment ; .)
    }               reduce using rule 6 (instruction -> assignment ; .)
    ELSE            reduce using rule 6 (instruction -> assignment ; .)


state 22

    (9) instruction -> BREAK ; .

    BREAK           reduce using rule 9 (instruction -> BREAK ; .)
    CONTINUE        reduce using rule 9 (instruction -> BREAK ; .)
    PRINT           reduce using rule 9 (instruction -> BREAK ; .)
    {               reduce using rule 9 (instruction -> BREAK ; .)
    ID              reduce using rule 9 (instruction -> BREAK ; .)
    IF              reduce using rule 9 (instruction -> BREAK ; .)
    RETURN          reduce using rule 9 (instruction -> BREAK ; .)
    WHILE           reduce using rule 9 (instruction -> BREAK ; .)
    FOR             reduce using rule 9 (instruction -> BREAK ; .)
    $end            reduce using rule 9 (instruction -> BREAK ; .)
    }               reduce using rule 9 (instruction -> BREAK ; .)
    ELSE            reduce using rule 9 (instruction -> BREAK ; .)


state 23

    (10) instruction -> CONTINUE ; .

    BREAK           reduce using rule 10 (instruction -> CONTINUE ; .)
    CONTINUE        reduce using rule 10 (instruction -> CONTINUE ; .)
    PRINT           reduce using rule 10 (instruction -> CONTINUE ; .)
    {               reduce using rule 10 (instruction -> CONTINUE ; .)
    ID              reduce using rule 10 (instruction -> CONTINUE ; .)
    IF              reduce using rule 10 (instruction -> CONTINUE ; .)
    RETURN          reduce using rule 10 (instruction -> CONTINUE ; .)
    WHILE           reduce using rule 10 (instruction -> CONTINUE ; .)
    FOR             reduce using rule 10 (instruction -> CONTINUE ; .)
    $end            reduce using rule 10 (instruction -> CONTINUE ; .)
    }               reduce using rule 10 (instruction -> CONTINUE ; .)
    ELSE            reduce using rule 10 (instruction -> CONTINUE ; .)


state 24

    (11) instruction -> return_expr ; .

    BREAK           reduce using rule 11 (instruction -> return_expr ; .)
    CONTINUE        reduce using rule 11 (instruction -> return_expr ; .)
    PRINT           reduce using rule 11 (instruction -> return_expr ; .)
    {               reduce using rule 11 (instruction -> return_expr ; .)
    ID              reduce using rule 11 (instruction -> return_expr ; .)
    IF              reduce using rule 11 (instruction -> return_expr ; .)
    RETURN          reduce using rule 11 (instruction -> return_expr ; .)
    WHILE           reduce using rule 11 (instruction -> return_expr ; .)
    FOR             reduce using rule 11 (instruction -> return_expr ; .)
    $end            reduce using rule 11 (instruction -> return_expr ; .)
    }               reduce using rule 11 (instruction -> return_expr ; .)
    ELSE            reduce using rule 11 (instruction -> return_expr ; .)


state 25

    (12) instruction -> PRINT create_stmt . ;

    ;               shift and go to state 50


state 26

    (55) create_stmt -> p_print_list .
    (57) p_print_list -> p_print_list . , expression

    ;               reduce using rule 55 (create_stmt -> p_print_list .)
    ,               shift and go to state 51


state 27

    (56) p_print_list -> STRING .

    ,               reduce using rule 56 (p_print_list -> STRING .)
    ;               reduce using rule 56 (p_print_list -> STRING .)


state 28

    (58) p_print_list -> expression .
    (24) expression -> expression . ADD expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . MUL expression
    (27) expression -> expression . DIVIDE expression
    (29) expression -> expression . '
    (30) expression -> expression . DOTADD expression
    (31) expression -> expression . DOTSUB expression
    (32) expression -> expression . DOTMUL expression
    (33) expression -> expression . DOTDIVIDE expression

    ,               reduce using rule 58 (p_print_list -> expression .)
    ;               reduce using rule 58 (p_print_list -> expression .)
    ADD             shift and go to state 52
    MINUS           shift and go to state 53
    MUL             shift and go to state 54
    DIVIDE          shift and go to state 55
    '               shift and go to state 56
    DOTADD          shift and go to state 57
    DOTSUB          shift and go to state 58
    DOTMUL          shift and go to state 59
    DOTDIVIDE       shift and go to state 60


state 29

    (28) expression -> MINUS . expression
    (24) expression -> . expression ADD expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression MUL expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . MINUS expression
    (29) expression -> . expression '
    (30) expression -> . expression DOTADD expression
    (31) expression -> . expression DOTSUB expression
    (32) expression -> . expression DOTMUL expression
    (33) expression -> . expression DOTDIVIDE expression
    (34) expression -> . matrix_expression
    (35) expression -> . matrix_create
    (36) expression -> . INTNUM
    (37) expression -> . FLOAT
    (38) expression -> . ID
    (39) matrix_expression -> . ZEROS ( expression )
    (40) matrix_expression -> . ONES ( expression )
    (41) matrix_expression -> . EYE ( expression )
    (42) matrix_create -> . [ matrix_rows ]

    MINUS           shift and go to state 29
    INTNUM          shift and go to state 32
    FLOAT           shift and go to state 33
    ID              shift and go to state 34
    ZEROS           shift and go to state 35
    ONES            shift and go to state 36
    EYE             shift and go to state 37
    [               shift and go to state 38

    expression                     shift and go to state 61
    matrix_expression              shift and go to state 30
    matrix_create                  shift and go to state 31

state 30

    (34) expression -> matrix_expression .

    ADD             reduce using rule 34 (expression -> matrix_expression .)
    MINUS           reduce using rule 34 (expression -> matrix_expression .)
    MUL             reduce using rule 34 (expression -> matrix_expression .)
    DIVIDE          reduce using rule 34 (expression -> matrix_expression .)
    '               reduce using rule 34 (expression -> matrix_expression .)
    DOTADD          reduce using rule 34 (expression -> matrix_expression .)
    DOTSUB          reduce using rule 34 (expression -> matrix_expression .)
    DOTMUL          reduce using rule 34 (expression -> matrix_expression .)
    DOTDIVIDE       reduce using rule 34 (expression -> matrix_expression .)
    ,               reduce using rule 34 (expression -> matrix_expression .)
    ;               reduce using rule 34 (expression -> matrix_expression .)
    GREATER         reduce using rule 34 (expression -> matrix_expression .)
    LESS            reduce using rule 34 (expression -> matrix_expression .)
    GREATEREQ       reduce using rule 34 (expression -> matrix_expression .)
    LESSEQ          reduce using rule 34 (expression -> matrix_expression .)
    NOTEQ           reduce using rule 34 (expression -> matrix_expression .)
    EQ              reduce using rule 34 (expression -> matrix_expression .)
    )               reduce using rule 34 (expression -> matrix_expression .)
    ]               reduce using rule 34 (expression -> matrix_expression .)
    :               reduce using rule 34 (expression -> matrix_expression .)
    BREAK           reduce using rule 34 (expression -> matrix_expression .)
    CONTINUE        reduce using rule 34 (expression -> matrix_expression .)
    PRINT           reduce using rule 34 (expression -> matrix_expression .)
    {               reduce using rule 34 (expression -> matrix_expression .)
    ID              reduce using rule 34 (expression -> matrix_expression .)
    IF              reduce using rule 34 (expression -> matrix_expression .)
    RETURN          reduce using rule 34 (expression -> matrix_expression .)
    WHILE           reduce using rule 34 (expression -> matrix_expression .)
    FOR             reduce using rule 34 (expression -> matrix_expression .)


state 31

    (35) expression -> matrix_create .

    ADD             reduce using rule 35 (expression -> matrix_create .)
    MINUS           reduce using rule 35 (expression -> matrix_create .)
    MUL             reduce using rule 35 (expression -> matrix_create .)
    DIVIDE          reduce using rule 35 (expression -> matrix_create .)
    '               reduce using rule 35 (expression -> matrix_create .)
    DOTADD          reduce using rule 35 (expression -> matrix_create .)
    DOTSUB          reduce using rule 35 (expression -> matrix_create .)
    DOTMUL          reduce using rule 35 (expression -> matrix_create .)
    DOTDIVIDE       reduce using rule 35 (expression -> matrix_create .)
    ,               reduce using rule 35 (expression -> matrix_create .)
    ;               reduce using rule 35 (expression -> matrix_create .)
    GREATER         reduce using rule 35 (expression -> matrix_create .)
    LESS            reduce using rule 35 (expression -> matrix_create .)
    GREATEREQ       reduce using rule 35 (expression -> matrix_create .)
    LESSEQ          reduce using rule 35 (expression -> matrix_create .)
    NOTEQ           reduce using rule 35 (expression -> matrix_create .)
    EQ              reduce using rule 35 (expression -> matrix_create .)
    )               reduce using rule 35 (expression -> matrix_create .)
    ]               reduce using rule 35 (expression -> matrix_create .)
    :               reduce using rule 35 (expression -> matrix_create .)
    BREAK           reduce using rule 35 (expression -> matrix_create .)
    CONTINUE        reduce using rule 35 (expression -> matrix_create .)
    PRINT           reduce using rule 35 (expression -> matrix_create .)
    {               reduce using rule 35 (expression -> matrix_create .)
    ID              reduce using rule 35 (expression -> matrix_create .)
    IF              reduce using rule 35 (expression -> matrix_create .)
    RETURN          reduce using rule 35 (expression -> matrix_create .)
    WHILE           reduce using rule 35 (expression -> matrix_create .)
    FOR             reduce using rule 35 (expression -> matrix_create .)


state 32

    (36) expression -> INTNUM .

    ADD             reduce using rule 36 (expression -> INTNUM .)
    MINUS           reduce using rule 36 (expression -> INTNUM .)
    MUL             reduce using rule 36 (expression -> INTNUM .)
    DIVIDE          reduce using rule 36 (expression -> INTNUM .)
    '               reduce using rule 36 (expression -> INTNUM .)
    DOTADD          reduce using rule 36 (expression -> INTNUM .)
    DOTSUB          reduce using rule 36 (expression -> INTNUM .)
    DOTMUL          reduce using rule 36 (expression -> INTNUM .)
    DOTDIVIDE       reduce using rule 36 (expression -> INTNUM .)
    ,               reduce using rule 36 (expression -> INTNUM .)
    ;               reduce using rule 36 (expression -> INTNUM .)
    GREATER         reduce using rule 36 (expression -> INTNUM .)
    LESS            reduce using rule 36 (expression -> INTNUM .)
    GREATEREQ       reduce using rule 36 (expression -> INTNUM .)
    LESSEQ          reduce using rule 36 (expression -> INTNUM .)
    NOTEQ           reduce using rule 36 (expression -> INTNUM .)
    EQ              reduce using rule 36 (expression -> INTNUM .)
    )               reduce using rule 36 (expression -> INTNUM .)
    ]               reduce using rule 36 (expression -> INTNUM .)
    :               reduce using rule 36 (expression -> INTNUM .)
    BREAK           reduce using rule 36 (expression -> INTNUM .)
    CONTINUE        reduce using rule 36 (expression -> INTNUM .)
    PRINT           reduce using rule 36 (expression -> INTNUM .)
    {               reduce using rule 36 (expression -> INTNUM .)
    ID              reduce using rule 36 (expression -> INTNUM .)
    IF              reduce using rule 36 (expression -> INTNUM .)
    RETURN          reduce using rule 36 (expression -> INTNUM .)
    WHILE           reduce using rule 36 (expression -> INTNUM .)
    FOR             reduce using rule 36 (expression -> INTNUM .)


state 33

    (37) expression -> FLOAT .

    ADD             reduce using rule 37 (expression -> FLOAT .)
    MINUS           reduce using rule 37 (expression -> FLOAT .)
    MUL             reduce using rule 37 (expression -> FLOAT .)
    DIVIDE          reduce using rule 37 (expression -> FLOAT .)
    '               reduce using rule 37 (expression -> FLOAT .)
    DOTADD          reduce using rule 37 (expression -> FLOAT .)
    DOTSUB          reduce using rule 37 (expression -> FLOAT .)
    DOTMUL          reduce using rule 37 (expression -> FLOAT .)
    DOTDIVIDE       reduce using rule 37 (expression -> FLOAT .)
    ,               reduce using rule 37 (expression -> FLOAT .)
    ;               reduce using rule 37 (expression -> FLOAT .)
    GREATER         reduce using rule 37 (expression -> FLOAT .)
    LESS            reduce using rule 37 (expression -> FLOAT .)
    GREATEREQ       reduce using rule 37 (expression -> FLOAT .)
    LESSEQ          reduce using rule 37 (expression -> FLOAT .)
    NOTEQ           reduce using rule 37 (expression -> FLOAT .)
    EQ              reduce using rule 37 (expression -> FLOAT .)
    )               reduce using rule 37 (expression -> FLOAT .)
    ]               reduce using rule 37 (expression -> FLOAT .)
    :               reduce using rule 37 (expression -> FLOAT .)
    BREAK           reduce using rule 37 (expression -> FLOAT .)
    CONTINUE        reduce using rule 37 (expression -> FLOAT .)
    PRINT           reduce using rule 37 (expression -> FLOAT .)
    {               reduce using rule 37 (expression -> FLOAT .)
    ID              reduce using rule 37 (expression -> FLOAT .)
    IF              reduce using rule 37 (expression -> FLOAT .)
    RETURN          reduce using rule 37 (expression -> FLOAT .)
    WHILE           reduce using rule 37 (expression -> FLOAT .)
    FOR             reduce using rule 37 (expression -> FLOAT .)


state 34

    (38) expression -> ID .
